# ai-hedge-fund-research-stack

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  project.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/memory/: db.py  memory_manager.py  schema.sql
app/monitoring/: dashboard.py  log_writer.py
app/orchestration/: agents.py  graph.py  prefect_flow.py  state.py  tools.py
app/validation/: counterfactual.py  factfin_validator.py  metrics.py
infra/: docker-compose.yml
tests/: test_agents.py  test_graph.py  test_log_writer.py  test_memory_manager.py  test_prefect_flow.py  test_state.py  test_tools.py  test_validation.py
tests/integration/: test_memory_integration.py
